--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --testPathPattern=./src/",
+    "e2e": "jest --testPathPattern=./e2e/ --runInBand"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +19,10 @@
     "css-loader": "^6.7.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.1.2",
+    "jest-babel": "^1.0.1",
     "mini-css-extract-plugin": "^2.6.1",
+    "puppeteer": "^18.0.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
