--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "test": "jest --testPathPattern=./src/",
+    "test": "jest --passWithNoTests",
     "e2e": "jest --testPathPattern=./e2e/ --runInBand"
   },
   "author": "",
